Revision history for {{$dist->name}}

{{$NEXT}}
          - now requiring a more conservative minimum version for
            Module::Build::Tiny, when it is used.
          - fix the 'default' minting profile

0.086     2015-02-01 01:38:17Z
          - no longer scans inc/ for configure_requires minimum perl version
          - generated CONTRIBUTING file now mentions the existence of a TODO
            file in the repository (which is never packaged)
          - dropped the use of "use warnings FATAL => 'all';' in this
            distribution's tests, and in newly-minted distributions
          - add 'default' minting profile, which is the same as 'github'
          - switched from using [Git::NextVersion] and [PkgVersion] as the
            version provider and version inserter (respectively) to
            [RewriteVersion::Transitional] and
            [BumpVersionAfterRelease::Transitional]

0.085     2015-01-16 01:45:19Z
          - fix test failure with metadata mismatch created by [Run::*] 0.031

0.084     2015-01-09 21:46:59Z
          - fix tests that failed in 0.083 for anyone who did not have a
            ~/.pause file

0.083     2015-01-08 04:24:23Z
          - fix regression in 0.082 that caused new generated files not to be
            commited to git after a release
          - -remove = <plugin> now also accepts the unique plugin name, not
            just the class, for more targeted plugin removal

0.082     2015-01-03 20:15:37Z
          - use [Git::Describe]'s new on_package_line feature
          - (temporarily?) revert use of 'our' syntax for $VERSION
            declarations (see RT#101095)

0.081     2014-12-10 02:09:34Z
          - $VERSION statements inserted into modules now use 'our' syntax
            rather than fully-qualfied variable names
          - added more files to the list of things we will never gather from
            the dist, for future-proofing

0.080     2014-11-22 04:53:32Z