@@ -15,7 +15,9 @@ license             = {{ $dist->_license_class }}
 }}
 [@Author::ETHER]
 :version = {{ use Dist::Zilla::PluginBundle::Author::ETHER; Dist::Zilla::PluginBundle::Author::ETHER->VERSION }}
-{{ $zilla_plugin ? <<RESOURCES
+{{
+    ($zilla_plugin || $dist->name =~ /^Moose/ ? "Test::MinimumVersion.max_target_perl = 5.008001\n" : '')
+    . ($zilla_plugin ? <<RESOURCES
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#distzilla
@@ -24,7 +26,7 @@ x_MailingList = http://dzil.org/#mailing-list
 [Prereqs]
 Dist::Zilla::Plugin::MetaResources = 4.300039   ; v2 meta-compliant license field
 RESOURCES
-: '' }}
+: '') }}
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
 
